# agent-nuwa

./: .gitignore  LICENSE  README.md  pyproject.toml
agents/: nuwa.toml
docs/superpowers/plans/: 2026-07-15-agent-nuwa-config-only.md  2026-07-16-nuwa-persistent-agent-factory.md
docs/superpowers/specs/: 2026-07-15-agent-nuwa-config-only-design.md  2026-07-16-nuwa-persistent-agent-factory-design.md
src/project_nuwa/: __init__.py  __main__.py  installer.py
src/project_nuwa/agents/: __init__.py
tests/: test_agent_definition.py  test_installer.py  test_nuwa_factory_contract.sh
