[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "project-nuwa"
version = "1.0.0"
description = "Portable installer for the NÜWA Codex custom agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Code Generators",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/zzzhouzhenzz/project-nuwa"
Repository = "https://github.com/zzzhouzhenzz/project-nuwa"
Issues = "https://github.com/zzzhouzhenzz/project-nuwa/issues"

[project.scripts]
project-nuwa = "project_nuwa.installer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
project_nuwa = ["agents/*.toml"]
